--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
             <div class="cabecalho__pesquisar">
 
-                <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input">
-                <button class="pesquisar__botao">
+                <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input" data-pesquisa>
+                <button type="button" class="pesquisar__botao" data-botao-pesquisa></button>
 
             </div>
 
@@ -34,7 +34,7 @@
 
     </header>
 
-    <ul class="videos__container" alt="videos alura" data-lista>
+    <ul class="videos__container" aria-label="videos alura" data-lista>
         <!-- <li class="videos__item">
             <iframe width="100%" height="72%" src="https://www.youtube.com/embed/pA-EgOaF23I"
                 title="YouTube video player" frameborder="0"
@@ -83,6 +83,7 @@
 
     <!-- <script src="./js/conectaApi.js"></script> -->
     <script type="module" src="./js/mostrarVideos.js"></script>
+    <script type="module" src="./js/buscarVideo.js"></script>
 </body>
 
 </html>
